# MFCC_CUDA

src/: CMakeLists.txt  pro2_demo.cpp  termPro_cuda_demo.cpp
src/Feature/: FeatureExtractor.cpp  FeatureExtractor.cu  FeatureExtractor.h  FeatureExtractorTool.cu  FeatureExtractorTool.h
